# vrjuggler

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  VRJugglerConfig.cmake.in  VRJugglerConfigVersion.cmake.in  settings.gradle
modules/: CMakeLists.txt
modules/gadgeteer/: CMakeLists.txt
modules/gadgeteer/cluster/: ClusterManager.h
modules/gadgeteer/drivers/: CMakeLists.txt
modules/gadgeteer/drivers/3Dconnexion/SpaceBall/: CMakeLists.txt
modules/gadgeteer/drivers/5DT/DataGlove/: CMakeLists.txt
modules/gadgeteer/drivers/5DT/DataGloveUltraWireless/: CMakeLists.txt
modules/gadgeteer/drivers/ART/DTrack/: CMakeLists.txt
modules/gadgeteer/drivers/Ascension/Flock/: CMakeLists.txt  FlockStandalone.cpp
modules/gadgeteer/drivers/Ascension/MotionStar/: CMakeLists.txt  MotionStarStandalone.h
modules/gadgeteer/drivers/Ascension/Wanda/: CMakeLists.txt
modules/gadgeteer/drivers/Elexol/Ether24/: CMakeLists.txt
modules/gadgeteer/drivers/EssentialReality/P5Glove/: CMakeLists.txt
modules/gadgeteer/drivers/Fakespace/PinchGlove/: CMakeLists.txt
modules/gadgeteer/drivers/Immersion/IBox/: CMakeLists.txt
modules/gadgeteer/drivers/Intersense/IS900/: CMakeLists.txt  isdriver.cpp  timer.cpp
modules/gadgeteer/drivers/Intersense/IntersenseAPI/: CMakeLists.txt
modules/gadgeteer/drivers/Intersense/IntersenseAPI/isense/: isense.c
modules/gadgeteer/drivers/Logitech/ThreeDMouse/: CMakeLists.txt
modules/gadgeteer/drivers/Microsoft/DirectXJoystick/: CMakeLists.txt
modules/gadgeteer/drivers/Microsoft/SpeechRecognition/: CMakeLists.txt
modules/gadgeteer/drivers/MotionNode/MotionNode/: CMakeLists.txt
modules/gadgeteer/drivers/NaturalPoint/OptiTrack/: CMakeLists.txt
modules/gadgeteer/drivers/Open/: CMakeLists.txt
modules/gadgeteer/drivers/Open/DTK/: CMakeLists.txt
modules/gadgeteer/drivers/Open/LinuxJoydev/: CMakeLists.txt
modules/gadgeteer/drivers/Open/SdlJoystick/: CMakeLists.txt
modules/gadgeteer/drivers/Open/TUIO/: CMakeLists.txt
modules/gadgeteer/drivers/Open/Trackd/: CMakeLists.txt
modules/gadgeteer/drivers/Open/VRPN/: CMakeLists.txt  Makefile.in  VRPNDevices.cpp  VRPNText.cpp  VRPNText.h  Vrpn.cpp
modules/gadgeteer/drivers/Polhemus/Fastrak/: CMakeLists.txt
modules/gadgeteer/drivers/USDigital/SerialEncoder/: CMakeLists.txt  SEIBus.h
modules/gadgeteer/drivers/VRCO/TrackdAPI/: CMakeLists.txt
modules/gadgeteer/drivers/VirtualTechnologies/CyberGlove/: CMakeLists.txt
modules/gadgeteer/drivers/noDNA/X-IST/: CMakeLists.txt
modules/gadgeteer/gadget/: CMakeLists.txt  NetworkManager.h  gadgetDefines.h.cmake_in  gadgetmain.cpp
modules/gadgeteer/gadget/Type/: AllBaseTypes.h  InputDevice.h  LinearSigmoidPositionFilter.h  PositionData.h  TypeHelpers.h
modules/gadgeteer/gadget/Util/: PathHelpers.cpp
modules/gadgeteer/plugins/: CMakeLists.txt
modules/gadgeteer/plugins/ApplicationBarrierManager/: ApplicationBarrierManager.h  CMakeLists.txt
modules/gadgeteer/plugins/ApplicationDataManager/: ApplicationDataManager.h  CMakeLists.txt
modules/gadgeteer/plugins/EventPlugin/: CMakeLists.txt
modules/gadgeteer/plugins/RIMPlugin/: CMakeLists.txt  RIMPlugin.h
modules/gadgeteer/test/: CMakeLists.txt  TypeHelpers-Id.cpp  TypeHelpers-OrderedBases.cpp  TypeHelpers-Pow.cpp
modules/jackal/: CMakeLists.txt  jccl.rc
modules/jackal/common/jccl/: CMakeLists.txt  jcclDefines.h.cmake_in  jcclDefines.h.in_cmake  jcclParam.h.in  jcclmain.cpp
modules/jackal/config/: CMakeLists.txt  build.gradle
modules/jackal/config/jccl/Config/: ConfigElement.cpp
modules/jackal/data/: CMakeLists.txt
modules/jackal/mtree/: JCCL.data.dist.in
modules/jackal/rtrc/jccl/RTRC/: ConfigManager.cpp  ConfigManager.h
modules/jackal/tools/xmlupdate/: CMakeLists.txt
modules/sonix/: CMakeLists.txt
modules/sonix/plugins/: CMakeLists.txt
modules/sonix/plugins/OpenAL/: CMakeLists.txt
modules/sonix/snx/: CMakeLists.txt  Makefile.in  SoundFactory.cpp  snxDefines.h.cmake_in  snxParam.h.in  snxmain.cpp
modules/tweek/: CMakeLists.txt
modules/tweek/extensions/java/: CMakeLists.txt
modules/tweek/java/: CMakeLists.txt  build.gradle  settings.gradle
modules/tweek/java/org/vrjuggler/tweek/: build.gradle
modules/tweek/java/org/vrjuggler/tweek/Viewers/: build.gradle
modules/tweek/test/PrefsTestBean/: Makefile.in
modules/tweek/tweek/: tweekParam.h.in  tweekmain.cpp
modules/vapor/: CMakeLists.txt
modules/vapor/test/: CMakeLists.txt
modules/vapor/test/SerialPort/: CMakeLists.txt
modules/vapor/test/Socket/: CMakeLists.txt
modules/vapor/test/Sync/: CMakeLists.txt
modules/vapor/test/TestSuite/: CMakeLists.txt
modules/vapor/test/Thread/: CMakeLists.txt
modules/vapor/vpr/: CMakeLists.txt  SystemBase.cpp  SystemBase.h  vprDefines.h.cmake_in  vprParam.h.in  vprmain.cpp
modules/vapor/vpr/DynLoad/: Library.h
modules/vapor/vpr/Thread/: BaseThread.cpp  BaseThread.h
modules/vapor/vpr/md/: Makefile.in
modules/vapor/vpr/md/POSIX/: Makefile.in
modules/vapor/vpr/md/WIN32/: SystemWin32.cpp  SystemWin32.h
modules/vapor/vpr/md/WIN32/DynLoad/: LibraryWin32.cpp  LibraryWin32.h
modules/vapor/vpr/md/WIN32/Sync/: CondVarWin32.cpp  SemaphoreWin32.h
modules/vapor/vpr/md/WIN32/Thread/: ThreadKeyWin32.h
modules/vapor/vpr/md/WIN32/Util/: ErrorImplWin32.cpp
modules/vrjuggler/: CMakeLists.txt
modules/vrjuggler/data/definitions/: vrpn.jdef  vrpntext.jdef
modules/vrjuggler/design/: userOpenSGApp.h
modules/vrjuggler/mtree/: VJ.install.dist.in
modules/vrjuggler/samples/speech/simple/SpeechRecogApp/: Makefile.in
modules/vrjuggler/test/Draw/: Makefile.in
modules/vrjuggler/vrj/: CMakeLists.txt  vrjDefines.h.cmake_in  vrjParam.h.in  vrjmain.cpp
modules/vrjuggler/vrj/Draw/: CMakeLists.txt
modules/vrjuggler/vrj/Draw/Direct3D/: CMakeLists.txt
modules/vrjuggler/vrj/Draw/OGL/: GlDrawObjectFunctor.h
modules/vrjuggler/vrj/Draw/OpenGL/: CMakeLists.txt
modules/vrjuggler/vrj/Draw/Pf/: CMakeLists.txt
modules/vrjuggler/vrj/Kernel/: Kernel.cpp
modules/vrjuggler/vrj/Performance/: PerformanceMediator.cpp
modules/vrjuggler/vrjconfig/: CMakeLists.txt  build.gradle
(+18 files in other folders)
